examples/good/14-polymorfic_and_rec.ez
type Tree a = Leaf a | Node (Tree a) (Tree a);

addAllLeaves : Tree Integer -> Integer;
addAllLeaves tree = match tree with {
    Leaf n -> n;
    Node l r -> addAllLeaves l + addAllLeaves r;
};

main : Bool;
main = addAllLeaves (Node (Leaf 1) (Node (Leaf 2) (Leaf 3))) == 6;
