examples/bad/unkown_id_3.ez
f : Integer -> Integer;
f x = let { y = 2 } in x + y + z;

main : Integer;
main = f -1;
